--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ authors = [
 ]
 requires-python = ">=3.8"
 dependencies = [
-    "arxiv==1.4.8",
+    "arxiv==2.0.0",
+    "pandas==2.2.0",
     "anthropic==0.43.1",
     "pypdf==4.0.1",
     "python-docx==1.0.1",
