--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requires-python = ">=3.8"
 dependencies = [
     "arxiv==2.0.0",
     "pandas==2.2.0",
+    "pyarrow==15.0.0",
     "anthropic==0.43.1",
     "pypdf==4.0.1",
     "python-docx==1.0.1",
